--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -8,8 +8,10 @@
 		var duoshuoQuery = {short_name:"{{ site.duoshuo_shortname }}"};
 		(function() {
 		  var ds = document.createElement('script');
-		  ds.type = 'text/javascript';ds.async = true;
+		  ds.type = 'text/javascript';
+		  ds.async = true;
 		  // ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//' + site.github_username + '.disqus.com/embed.js';
+		  ds.src = "/static/js/embed.js";
 		  ds.charset = 'UTF-8';
 		  (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ds);
 		})();
@@ -27,7 +29,7 @@
 		};
 		(function() {
 			var d = document, s = d.createElement('script');
-			s.src = '//{{ site.disqus_shortname }}.disqus.com/embed.js';
+			s.src = '/static/js/embed.js';
 			s.setAttribute('data-timestamp', +new Date());
 			(d.head || d.body).appendChild(s);
 		})();
